# testplanner

./: .ci.yml  .pre-commit-config.yaml  README.md  pyproject.toml
testplanner/: Comments.py  Table.py  Testplan.py  __main__.py  cocotbxml_to_hjson.py  resource_map.py  summary_merger.py  testplan-tpl.xlsx  testplanner.py  xls.py
testplanner/template/: cov.css  main.css  performance_table.html  report_collective.html  report_dashboard.html  testplan_simulations.html
tests/: basic_test.sh
tests/data/testplanner/: common_testplan.hjson  foo_testplan.hjson
