[project]
name = "testplanner"
version = "0.0.1"
description = "Initial testbench autogeneration tool"
readme = "README.md"
dependencies = [
    "hjson",
    "mistletoe",
    "tabulate",
    "pyyaml",
]

[build-system]
requires = ["setuptools", "setuptools_scm"]
build-backend = "setuptools.build_meta"

[project.scripts]
testplanner = "testplanner.testplanner:main"
cocotbxml-to-hjson = "testplanner.cocotbxml_to_hjson:main"

[tool.setuptools.packages.find]
include = [
    "testplanner"
]

[tool.ruff.lint]
preview = true
select = [
    "I",      # enable isort
    "E",      # PEP8 errors
    "E261",   # At least two spaces before inline comment
    "E225",   # Missing whitespace around operator
    "F",      # PEP8 warnings
    "RUF100", # disallowed unnecessary noqa
]

[project.optional-dependencies]
xls = [
    "openpyxl"
]
